<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E-Book Reader</string>
    <string name="loading">Loading...</string>
    <string name="page_format">Page %1$d / %2$d</string>
    <string name="chapter_format">Chapter %1$d</string>
    <string name="menu_contents">Contents</string>
    <string name="menu_brightness">Brightness</string>
    <string name="menu_font_size">Font</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_back">Back</string>
    <string name="tap_left_hint">Tap left for previous page</string>
    <string name="tap_right_hint">Tap right for next page</string>
    <string name="tap_center_hint">Tap center to show menu</string>
</resources>


